# statistics

./: PRACTICA 1 ESTADISTICA.ipynb  PRACTICA 2 ESTADISTICA.ipynb  examen.ipynb  penguins.csv  pyproject.toml
